--- a/packages/terra-data-grid/src/subcomponents/SectionHeader.module.scss
+++ b/packages/terra-data-grid/src/subcomponents/SectionHeader.module.scss
@@ -1,5 +1,8 @@
 :local {
   .section-header {
+    background: lightgrey;
+    border-bottom: 1px solid #646464;
+
     height: 100%;
     position: relative;
     width: 100%;
